--- a/registration.html
+++ b/registration.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title>Registration Form</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="registrationstyle.css" rel="stylesheet" type="text/css" />
  </head>
  <body>
      <div class="registration-form">
