Registration button done

--- a/registration.html
+++ b/registration.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
- <head>
-    <title>Registration Form</title>
-    <link href="registrationstyle.css" rel="stylesheet" type="text/css" />
- </head>
+  <head>
+     <title>Registration Form</title>
+     <link href="registrationstyle.css" rel="stylesheet" type="text/css" />
+  </head>
+
  <body>
      <div class="registration-form">
         <h1>REGISTRATION FORM</h1>
      </div>
+
+     
+      <button>Registration</button>
+     
+
  </body>
 </html>
