form section done and updated the registration button

--- a/registration.html
+++ b/registration.html
@@ -8,11 +8,17 @@
  <body>
      <div class="registration-form">
         <h1>REGISTRATION FORM</h1>
+        <form action ="#" method ="post">
+           <p>Full Name:</p>
+           <input type="text" name="fullname" placeholder="Full Name">
+           <p>User Name</p>
+           <input type="text" name="username" placeholder="User Name">
+           <p>Email</p>
+           <input type="email" name="email" placeholder="Email">
+           <p>Password</p>
+           <input type="password" name="password" placeholder="Password">
+           <button>Registration</button>
+        </form>
      </div>
-
-     
-      <button>Registration</button>
-     
-
  </body>
 </html>
